--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@
 .resultContainer{
     width: 100%;
     height: 100%;
-    background-color: rgb(20, 20, 20);
+    background-color: black;
     position: absolute;
     transition: 3s;
     display: flex;
